[UPDATE] Fix z-index and how pregressionBar is displayed

--- a/src/scss/components/_progressionBar.scss
+++ b/src/scss/components/_progressionBar.scss
@@ -3,15 +3,19 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
+	padding-top: 18%;
 
 	background-image: url('../img/background_forest.png');
-	background-size: cover;
+	background-size: contain;
 	background-position: bottom left;
-
-	padding-top: 150px;
+	background-repeat: no-repeat;
 
 	&__container {
 		padding: 0 40px 60px 40px;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
 	}
 
 	&__sceneList {
